@@ -123,6 +123,9 @@ discriminant and $k \geq 0$.
 \fun{GEN}{gammamellininvrt}{GEN K, GEN s, long bitprec} no GC-clean, but
 suitable for \kbd{gerepileupto}.
 
+\fun{int}{Vgaeasytheta}{GEN Vga} return 1 if the inverse Mellin transform is
+an exponential and 0 otherwise.
+
 \fun{double}{dbllambertW0}{double a}
 
 \fun{double}{dbllambertW_1}{double a}
